<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BodrumLife</string>

<!-- Splash Screen Content-->
    <string name="head_text_splash">budrum</string>

    <string name="red_head_text_splash">life</string>

    <string name="publi_head_text_splash">\u0020 publication&#174;</string>

    <string name="bottum_text_splash">BODRUM\'A DAIR \r\nNEVARSA</string>
<!-- Main Plate Content-->
    <string name="head_of_list_event_text">ETKILEKLER</string>
    <string name="concert_button_text_main_plate">KONSER</string>
    <string name="shoping_button_text_main_plate">ALIŞVERİŞ</string>
    <string name="bar_cafe_button_text_main_plate">GECEKULÜPLERİ \r\nBARLER \r\nCAFELER</string>
    <string name="belderel_button_text_main_plate">BELDELER</string>
    <string name="hotel_button_text_main_plate">OTELLER</string>
    <string name="restoran_button_text_main_plate">RESTORANLAR</string>

<!-- Main Plate/About Content-->
    <string name="text_about"><b>Bodrumlife</b> \nuygulamasının yeni versiyonuna hoşgeldiniz. Bodrum şimdi avucunuzun içinde... Güncel etkinlikler, konserler, öneriler, oteller, restoranlar, gece kulüpleri ve Bodrum’un birbirinden güzel  beldelerine bu uygulamadan kolaylıkla ulaşabileceksiniz... Size yalnızca düğmelere ve oklara tıklamak kalıyor.</string>
    <string name="right_text_if_you_on_bodrumlife"><b>Bodrumlife</b>  geniş kapsamlı bir projedir... 25 yıldır\r\nBodrum’un yayın hayatında önemli bir yeri olan\n<b>Bodrumlife</b> Publications’ın bir yayınıdır. 3 ayda bir çıkan dergimiz <b>Bodrumlife</b>, Yılda iki kez çıkan\n<b>“Nereye Gidilir”</b> dergimiz ve 5 internet sitesi bu uygulamayı güncel olarak destekler. <b>\nwww.nereyegidilir.com, \nwww.bodrum-museum.com, \nwww.bodrumlife.com ve www.bodrumlife.com.tr, \nwww.bodrum-hotels.com</b> \nsitelerinden alınan güncel bilgilerle her zamangüncel ve en yeni bilgileri size aktarır... \n\nSayfalardaki içerikler, otel, restoran, gece kulübü gibi mekânların tanıtımı tamamen özgün yazılardan, yorumlardan ve kurumumuzun görüşlerinden oluşur... \nBire bir, yüzyüze yapılan görüşmeleri yansıtır... \n\nYapımcı:<b>Bodrumlife Publications </b> Mermedya Limited Şirketi - Bodrum\n\nİletişim +90 252 3484602 +90 532 2911812 \n<b>www.bodrumlife.com</b> \nbodrumlife@bodrumlife.com \n\nGrafik Tasarım - Uygulama : <b>Necip Damar</b> \nEditor-yazılar: <b>İkbal Çiğdem Damar</b> \nKatılımcılar: Konular altında belirtilmiştir \nFotoğraflar: <b>Ömer Doğan, Gökhan Gönenç,\nNecip Damar </b></string>
    <string name="wait_few_minutes">Wait few minute</string>
    <string name="text_sixth_about"><b>Bodrum\'a Dair \r\nNe Varsa</b></string>
    <string name="right_text_about_post_scriptum">“ Wish you were here” Aramızdan ayrılan arkadaşımız ve Bodrumlife’ın isim babası Tony Marciniec’in anısına” “Burada olsaydın herşey daha mükemmel olurdu...”</string>

<!--Concert Content-->
    <string name="bottom_tab_bar_otteller"><b>OTTELER</b></string>
    <string name="bottom_tab_bar_restoranlar"><b>RESTORANLAR</b></string>
    <string name="bottom_tab_bar_gece_yasami"><b>GECE YAŞAMI</b></string>
    <string name="bottom_tab_bar_alisveris"><b>ALIŞVERİŞ</b></string>
    <string name="bottom_tab_bar_basadon"><b>BAŞADöN</b></string>

</resources>
