<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_plate_fragment_bg"

    >
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        >
                <ImageView
                    android:id="@+id/bodrum_logo_image_main_plate_layout"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/bodrum_launcher"/>

                <RelativeLayout
                    android:id="@+id/wheare_to_go_main_plate_fragmet"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="5"
                    android:layout_margin="5dp"
                    android:background="@drawable/bodrum_launcher"

                    >
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:text="шось там"/>
                </RelativeLayout>

                <ListView
                    android:id="@+id/list_bodrum_event"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:background="#a4cfee"
                    android:dividerHeight="4dp"
                    android:divider="@drawable/list_event_divider"
                    />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"


        android:layout_margin="5dp"
        >
        <RelativeLayout
            android:id="@+id/concert_button_main_plate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bodrum_launcher"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="#69d1f5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/concert_button_text_main_plate"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shoping_button_main_plate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bodrum_launcher"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/shoping_button_text_main_plate"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bar_cafe_button_main_plate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/bodrum_launcher"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#ffc900"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bar_cafe_button_text_main_plate"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/belderel_button_main_plate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/bodrum_launcher"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#ffe561"
                android:gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/belderel_button_text_main_plate"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hotel_button_main_plate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/bodrum_launcher"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hotel_button_text_main_plate"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/restoran_button_main_plate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/bodrum_launcher"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#bade89"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/restoran_button_text_main_plate"/>
        </RelativeLayout>




    </LinearLayout>

</LinearLayout>