<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/concert_bg">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="9"
                  >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"

        android:src="@drawable/logo_bodrum_concert"
        />
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/logo_bodrum_concert"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
           />
        </LinearLayout>
    <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/white_plate_concert"-->
            <!--android:layout_marginTop="3dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_weight="1"-->
            <!-->-->

    <!--</RelativeLayout>-->
    <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/white_plate_concert"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginTop="3dp"-->
            <!--android:layout_weight="1"-->
            <!-->-->

    <!--</RelativeLayout>-->
    <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/white_plate_concert"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginTop="3dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_weight="1"-->
            <!-->-->
    <!--</RelativeLayout>-->
    <ListView
            android:id="@+id/fragmant_concert_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_margin="10dp"
        android:dividerHeight="10dp"
        android:divider="@drawable/color_transparent"

       />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="10"
                  android:orientation="horizontal"
                  >
<TextView android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="10"
          android:textSize="10dp"
          android:textColor="@color/color_white_white"
          android:id="@+id/Otteller"
          android:text="@string/bottom_tab_bar_otteller"
          android:gravity="right"

        />
        <TextView
            android:layout_height="match_parent"
            android:layout_width="5dp"
            android:background="@drawable/dashed_border"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="10"
                  android:textColor="@color/color_white_white"
                  android:id="@+id/Restoranlar"
                  android:textSize="10dp"
                  android:text="@string/bottom_tab_bar_restoranlar"
                  android:gravity="right"
                />

        <TextView
                android:layout_height="match_parent"
                android:layout_width="5dp"
                android:background="@drawable/dashed_border"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="10"
                  android:textColor="@color/color_white_white"
                  android:id="@+id/Gece_Yasami"
                  android:textSize="10dp"
                  android:text="@string/bottom_tab_bar_gece_yasami"
                  android:gravity="right"

                />
        <TextView
                android:layout_height="match_parent"
                android:layout_width="5dp"
                android:background="@drawable/dashed_border"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="10"
                  android:textColor="@color/color_white_white"
                  android:id="@+id/Alisveris"
                  android:textSize="10dp"
                  android:text="@string/bottom_tab_bar_alisveris"
                  android:gravity="right"

                />
        <TextView
                android:layout_height="match_parent"
                android:layout_width="5dp"
                android:background="@drawable/dashed_border"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="10"
                  android:textColor="@color/color_white_white"
                  android:id="@+id/Basadon"
                  android:textSize="10dp"
                  android:text="@string/bottom_tab_bar_basadon"
                  android:gravity="left"

                />
    </LinearLayout>
</LinearLayout>